# LrnScraper

./: .gitignore  Cargo.toml  README.md  rustyspider_config.json
src/: init.rs  log.rs  main.rs  template.rs  utils.rs
src/clean/: mod.rs
src/run/: browser.rs  mod.rs  save_content.rs  thread_pool.rs
