[package]
name = "RustySpider"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
colored = "3.0.0"
reqwest = {version = "0.12.12", features = ["blocking"]}
tl = "0.7.8"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
failure = "0.1.8"
anyhow = "1.0"
num_cpus = "1.0"
crossbeam = "0.8"
lazy_static = "1.4.0"