[package]
name = "RustySpider"
version = "0.6.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
colored = "3.0.0"
reqwest = {version = "0.12.12", features = ["blocking"]}
tl = "0.7.8"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
anyhow = "1.0"
num_cpus = "1.0"
inquire = "0.7.5"
csv = "1.3.1"
